example-yaml/deployment-for-hpa.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: rainbow-deployment
  labels:
    app: rainbow
spec:
  replicas: 3
  selector:
    matchLabels:
      app: rainbow
  template:
    metadata:
      labels:
        app: rainbow
    spec:
      containers:
      - name: rainbow
        image: nginx
        command:
        - '/bin/sh'
        - '-c'
        - 'echo $nginx_conf > /nginx.conf.template && envsubst < /nginx.conf.template > /etc/nginx/nginx.conf && exec nginx -g "daemon off;"'
        resources:
          limits:
            cpu: 50m
            memory: 50Mi
          requests:
            cpu: 1m
            memory: 1Mi
