example-yaml/load-generator.yaml
apiVersion: v1
kind: Pod
metadata:
  name: load-gen
  labels:
    app: load
spec:
  containers:
  - name: load-gen
    image: busybox
    command:
    - 'sh'
    - '-c'
    - 'echo "$RUN_SCRIPT" > run.sh && chmod +x ./run.sh && ./run.sh'
  restartPolicy: Never
