example-yaml/traefik.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: traefik
  labels:
    app: traefik
spec:
  replicas: 1
  selector:
    matchLabels:
      app: traefik
  template:
    metadata:
      labels:
        app: traefik
    spec:
      containers:
      - image: traefik:1.7.12
        name: traefik
        ports:
        - name: http
          containerPort: 80
          hostPort: 80
        volumeMounts:
        - mountPath: "/config"
          name: "config"
        securityContext:
          privileged: true
        args:
        - --kubernetes
        - --configfile=/config/traefik.toml
      volumes:
      - name: config
        configMap:
          name: traefik-configmap
