example-yaml/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: rainbow-svc
  labels:
    app: rainbow
spec:
  selector:
    app: rainbow
  ports:
  - name: http
    port: 80
  type: ClusterIP
